--- a/site/index.html
+++ b/site/index.html
@@ -547,6 +547,27 @@
               {k: "accuracy_mod", desc: "Range 3 = ACC +3", status: true, v: 3}
             ]
           },
+
+
+          {
+            damage: [4, 4],
+            guild: "Alas!",
+            name: "Synergy",
+            range: 5,
+            type: "Pistol",
+            crits: [],
+            hits: [
+              {min_roll: 2, add: 1},
+              {min_roll: 8, add: 1},
+              {min_roll: 16, add: 1}
+            ],
+            stats: [
+              {k: "damage_mod", v: 1},
+            ],
+            toggles: []
+          }
+
+
         ],
 
         name: "Rodger Hammerstien",
